--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">BangladeshSwedenPolytechnic</string>
-    <string name="title_activity_nav">Nav</string>
+    <string name="title_activity_nav">BSPI CST</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Bangladesh Sweden Polytechnic Institute</string>
